# uploadImages

./: .dockerignore  .travis.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
src/: lib.rs  logger.rs  main.rs  utils.rs
src/guards/: mod.rs
tests/: test_json_negative.rs  test_json_positive.rs  test_multipart_negative.rs  test_multipart_positive.rs  test_not_found_positive.rs  test_single_negative.rs  test_single_positive.rs
tests/dataset/: jpg.base64  json.json  png.base64
