[package]
name = "upload_images"
version = "0.1.0"
authors = ["Chugunov Roman <Zebs-BMK@yandex.ru>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Server for upload images"
homepage = "https://github.com/ChugunovRoman/upload_images"
repository = "https://github.com/ChugunovRoman/upload_images"
documentation = "https://docs.rs/upload_images/"

keywords = ["server", "api", "images"]
categories = ["web"]

[dependencies]
multipart = "0.16.1"
rocket = "0.4.2"
chrono = "0.4"
base64 = "0.10.1"
uuid = { version = "0.7", features = ["v4"] }
flexi_logger = "0.14.4"
log = "0.4.8"
reqwest = "0.9.22"


[dev-dependencies]
